# anonymize-rs

./: .gitignore  Cargo.toml  README.md  config.yaml
anonymize-py/: Cargo.toml  README.md  pyproject.toml
anonymize-py/src/: lib.rs
anonymize-rs/: Cargo.toml
anonymize-rs/src/: main.rs  models.rs  tract.rs
anonymize-rs/src/anonymizer/: flashtext_anonymizer.rs  mod.rs  ner_anonymizer.rs  regex_anonymizer.rs
anonymize-rs/tests/: integration_anonymizer.rs  integration_flashtext_anonymizer.rs  integration_ner_anonymizer.rs  integration_regex_anonymizer.rs
anonymize-rs/tests/config/: config_general.yaml  config_ner_en.yaml  config_ner_pl.yaml  fruits_regex.txt
docker/: Dockerfile  build.sh
examples/: example.py  example_ner.py  example_ner_quantization.py  example_ner_transformers.py  example_ner_transformers_pl.py
src/: anonymizer.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
src/anonymizer/: flashtext_anonymizer.rs  mod.rs  ner_anonymizer.rs  regex_anonymizer.rs
tests/: integration_anonymizer.rs  integration_flashtext_anonymizer.rs  integration_ner_anonymizer.rs  integration_regex_anonymizer.rs
tests/config/: config.yaml  config_ner_en.yaml  config_ner_pl.yaml
