[package]
name = "anonymize_rs"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
actix-files = "0.6.2"
actix-web = "4"
actix-rt = "2.8.0"
async-stream = "0.3.3"
once_cell = "1.17.1"
tokio = { version = "1.20.0", features = ["full"] }
bytes = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.71"
clap = { version = "4.1.8", features = ["derive"] }
dirs = "5.0.1"
regex = "1.8.4"
url = "2.4.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tract-onnx = "0.20.7"
tokenizers = "0.13.3"
ndarray = "0.15.6"
env_logger = "0.10.0"