[package]
name = "anonymizers"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/qooba/anonymize-rs"
description = "Data anonymization library"
license = "Apache-2.0"

[lib]
name = "anonymizers"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
anonymize-rs = { path = "../anonymize-rs" }
pyo3 = { version = "0.19.1", features = ["extension-module"] }
tokio = { version = "1.20.0", features = ["full"] }